--- a/DesktopApp/Form1.en.resx
+++ b/DesktopApp/Form1.en.resx
@@ -117,8 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="login_back" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\login_back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="loginPanel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>171, 258</value>
+  </data>
+  <data name="authPanel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>194, 253</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>837, 750</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Авторизация</value>
   </data>
 </root>
